Added footer CSS

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
   --medium-grey: hsl(216, 12%, 54%);
   --dark-blue: hsl(213, 19%, 18%);
   --very-dark-blue: hsl(216, 12%, 8%);
-
 }
 
 * {
@@ -17,5 +16,29 @@
 body {
   font-family: 'Overpass', sans-serif;
 }
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
+
+
+
+
+
+
+
+
+
+
+/* FOOTER */
+
+.attribution {
+  font-size: 11px;
+  text-align: center; 
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.attribution a {
+   color: hsl(228, 45%, 44%); 
+}
