Created basic CSS

--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,72 @@
 
 body {
   font-family: 'Overpass', sans-serif;
+  background-color: var(--very-dark-blue);
+  color: var(--white);
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.card {
+  max-width: 420px;
+  height: 420px;
+  margin: 200px auto;
+  padding: 25px;
+  background-color: var(--dark-blue);
+  border: none;
+  border-radius: 34px;
+}
 
+.star {
+  background-color: var(--medium-grey);
+  padding: 15px 15px 11px 15px;
+  border-radius: 50%;
+  width: fit-content;
+  position: relative;
+  margin-bottom: 30px;
+}
 
+.main-question {
+  font-size: 26px;
+  font-weight: 700;
+}
 
+.main-text {
+  font-size: 15px;
+  font-weight: 400;
+  margin: 30px 0;
+  line-height: 1.7;
+}
 
+.vote {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
 
+.numbers {
+  background-color: var(--medium-grey);
+  padding: 15px 20px;
+  border-radius: 50%;
+  margin-bottom: 30px;
 
+}
 
-
+.submit_button {
+  background-color: var(--primary-orange-color);
+  color: var(--white);
+  padding: 15px 10px;
+  width: 100%;
+  border: none;
+  text-transform: uppercase;
+  border-radius: 25px;
+  font-size: 15px;
+  letter-spacing: 2px;
+}
 
 /* FOOTER */
 
