Made application responsive

--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,12 @@ body {
 .attribution a {
    color: hsl(228, 45%, 44%); 
 }
+
+@media (max-width: 630px) {
+  .card {
+    max-width:350px;
+    margin: 100px auto;
+  }
+}
+
+
